<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordlayoutdetalhe"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="br.edu.ifspsaocarlos.agenda.activity.DetalheActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </android.support.design.widget.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <TextView
            android:id="@+id/textViewNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nome">
        </TextView>


        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>
        <TextView
            android:id="@+id/textViewFone1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fone">
        </TextView>
        <EditText
            android:id="@+id/editTextFone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone">
        </EditText>
        <TextView
            android:id="@+id/textViewFone2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/casa">
        </TextView>
        <EditText
            android:id="@+id/editTextCasa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone">
        </EditText>
        <TextView
            android:id="@+id/textViewData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/data">
        </TextView>
        <EditText
            android:id="@+id/editTextData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date">
        </EditText>
        <TextView
            android:id="@+id/textViewEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email" >
        </TextView>
        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
        </EditText>
        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:numStars="1"
            android:stepSize="1"
            android:progressTint="#fff702">
        </RatingBar>

    </LinearLayout>
</android.support.design.widget.CoordinatorLayout>

